News: Paste Script
==================

svn trunk
---------

* Initialize logging earlier in the serve command for components that want
  to utilize it. Patch from Christopher Lenz.

1.3.4
-----

* Make sure that when using ``--monitor`` or ``--reload``, if the
  parent monitoring process dies, also kill the subprocess.
* When using ``paster serve --log-file``, append to the log file (was
  truncating any previous contents).

* Read logging information from the server file, using the logging module's
  `standard configuration format
  <http://python.org/doc/current/lib/logging-config-fileformat.html>`_

* When adding files don't fail because an svn command fails.  Helpful
  particularly on Windows, when the svn command-line isn't installed
  (e.g., using TortoiseSVN).

1.3.3
-----

* Fixed problem with ``paster serve`` on Windows.  Also on Windows,
  fixed issue with executables with spaces in their names (this case
  requires the ``win32all`` module).

* You can use ``+dot+`` in your project template filenames,
  specifically so that you can use leading dots in the filename.
  Usually leading dots cause the file to be ignored.  So if you want
  to have new projects contain a ``.cvsignore`` file, you can put a
  ``+dot+cvsignore`` file in your template.

* Relatedly, ``+plus+`` has been added so you can include pluses.

1.3.2
-----

* ``paster`` was largely broken under Windows; fixed.

1.3.1
-----

* Fix related to Python 2.5 (when there are errors creating files, you
  could get infinite recursion under Python 2.5).

* Use ``subprocess`` module in ``paster serve`` command.  Added
  ``--monitor`` option which will restart the server if it exits.

* The ``exe`` command now does % substitution in keys (e.g.,
  ``pid_file=%(here)s/paste.pid``).

* Some import problems with Cheetah should be improved.

1.3
---

* Fixed an exception being raised when shutting down flup servers using
  sockets.

* Fixed the CherryPy 3 WSGI server entry point's handling of SIGHUP