@@ -7,6 +7,9 @@ svn trunk
 * Initialize logging earlier in the serve command for components that want
   to utilize it. Patch from Christopher Lenz.
 
+* Fixed Python 2.3 incompatibility (no ``string.Template``) in
+  ``paste.script.appinstall``.
+
 1.3.4
 -----
 
